Add unit tests for GTFS service